fix height on mobile device

--- a/client/style.css
+++ b/client/style.css
@@ -9,6 +9,7 @@
 
 body {
   background: #343541;
+  height: 90vh;
 }
 
 #app {
@@ -137,14 +138,3 @@ textarea {
   outline: none;
 }
 
-button {
-  outline: 0;
-  border: 0;
-  cursor: pointer;
-  background: transparent;
-}
-
-form img {
-  width: 30px;
-  height: 30px;
-}
